feat: 添加智能代码页选择模块
- 新增 `__main__.py` 文件，包含智能判断代码页的功能，用于解压时自动选择合适的代码页。
- 实现了日志系统配置、语言检测、字符集检测及代码页选择逻辑。
- 提供了便捷的解压函数，支持根据文件名和内容智能选择代码页，增强了用户体验。

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ dependencies = [
     "pyperclip>=1.8.0",
     "send2trash>=1.8.0",
     "pywin32>=306; sys_platform == 'win32'",
+    "langdetect>=1.0.9",
+    "charset-normalizer>=3.4.2",
+    "loguru>=0.7.3",
 ]
 
 [project.optional-dependencies]
@@ -19,15 +22,14 @@ dev = [
 ]
 
 [project.scripts]
-smartzip = "src.main:main"
-
+# smartzip = "main:main"
+pagez = "pagez.__main__:main"
 [build-system]
 requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
-where = ["."]
-include = ["src*"]
+where = ["src"]
 
 [tool.black]
 line-length = 88
