feat: Implement logger configuration module with Loguru integration
- Added `logger_config.py` for unified logging setup.
- Configured console and file logging with rotation and retention policies.
- Created log files organized by date and hour.

feat: Introduce Smart Code Page Detection

- Developed `smart_detector.py` for intelligent code page detection based on file names and contents.
- Implemented caching for performance optimization.
- Added methods for extracting archive information and testing code page extraction.

feat: Enhance utility functions for language detection and subprocess handling

- Created `utils.py` with various helper functions including language detection and encoding detection.
- Implemented thread-safe caching and subprocess execution.

test: Add comprehensive tests for language detection and code page detection

- Created `quick_test.py` and `test_refactor.py` for testing language detection and code page detection functionalities.
- Included tests for thread safety and performance improvements.

chore: Update logging structure and test cases

- Added log files for testing and debugging purposes.
- Improved logging messages for better traceability.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "smartzip"
+name = "smartz"
 version = "3.4.0"
 description = "SmartZip - 7-zip功能扩展工具的Python实现"
 readme = "README.md"
