--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,9 +28,9 @@ pagez = "pagez.__main__:main"
 requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
-[tool.setuptools.packages.find]
-where = ["src"]
-
+[tool.setuptools]
+packages = ["pagez"]
+package-dir = {"" = "src"}
 [tool.black]
 line-length = 88
 target-version = ['py38']
