--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-packages = ["pagez"]
+packages = ["smartz", "pagez"]
 package-dir = {"" = "src"}
 [tool.black]
 line-length = 88
