feat: Add ZIP file encoding fixer and decoder modules
- Implemented `fix_zip_encoding.py` to handle ZIP file name encoding issues, including extraction and fixing capabilities.
- Created `zip_filename_decoder.py` for reliable decoding of ZIP file names, supporting multiple encodings and UTF-8 detection.
- Developed `encoding_detector.py` to analyze archives for encoding issues using 7z, with JSON output for results.
- Added a test script `test_interactive.py` for interactive testing of the new features.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "langdetect>=1.0.9",
     "charset-normalizer>=3.4.2",
     "loguru>=0.7.3",
+    "chardet>=5.0.0",
 ]
 
 [project.optional-dependencies]
