--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,15 +22,16 @@ dev = [
     "flake8>=4.0.0",
 ]
 
-[project.scripts]
-# smartzip = "main:main"
-# pagez = "pagez.__main__:main"
+
 
 # 定义pagez作为独立包
 [tool.setuptools]
 package-dir = {"" = "src"}  # 告诉 setuptools 包位于 src 目录
-packages = ["smartz","pagez","pagez.core"]
+packages = ["smartz","pagez"]
 
+[project.scripts]
+# smartzip = "main:main"
+pagez = "pagez.__main__:main"
 [build-system]
 requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
