修复: 更新.gitignore以排除pagez日志目录，调整pyproject.toml中的包配置，删除不再需要的日志文件和工具

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,8 +26,8 @@ dev = [
 
 # 定义pagez作为独立包
 [tool.setuptools]
-package-dir = {"" = "src"}  # 告诉 setuptools 包位于 src 目录
-packages = ["smartz","pagez"]
+package-dir = {"" = "src"}
+packages = ["find:"]
 
 [project.scripts]
 # smartzip = "main:main"
